style: replace Collectors.toList() with Stream.toList() in findPopular